✨ TinyTask支持dryrun